--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
   <!-- Newsletter Form -->
 <style>
   .newsletter-box {
+    font-family: sans-serif;
     max-width: 500px;
     margin: 40px auto;
     background: #fff;
