--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
   <!-- Newsletter Form -->
 <style>
   .newsletter-box {
-    font-family: sans-serif;
-    max-width: 500px;
+    font-family: "PP Nikkei Maru Regular", "sans-serif";
+    max-width: 800px;
     margin: 40px auto;
     background: #fff;
     color: rgba(0, 0, 0, 0.85);
@@ -55,7 +55,6 @@
 </style>
 
 <div class="newsletter-box">
-  <h2>Subscribe to our Newsletter</h2>
   <form id="newsletterForm">
     <label for="forename">Forename *</label>
     <input type="text" name="forename" required="">
