--- a/index.html
+++ b/index.html
@@ -5,78 +5,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Custom Font: PPNikkeiMaru-Regular -->
-  <style>
-    @font-face {
-      font-family: 'PPNikkeiMaru';
-      src: url('https://freight.cargo.site/m/D2361668739318309632944015578460/PPNikkeiMaru-Regular.woff2') format('woff2');
-      font-weight: normal;
-      font-style: normal;
-    }
+<style>
+  @font-face {
+    font-family: 'PPNikkeiMaru';
+    src: url('https://freight.cargo.site/m/D2361668739318309632944015578460/PPNikkeiMaru-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-    body {
-      font-family: 'PPNikkeiMaru', sans-serif;
-      color: rgba(0, 0, 0, 0.85);
-      margin: 0;
-      padding: 2rem;
-    }
+  body {
+    font-family: 'PPNikkeiMaru', sans-serif;
+    background-color: transparent;
+    color: #111;
+    margin: 0;
+    padding: 2rem;
+  }
 
-    .form-wrapper {
-      max-width: 500px;
-      margin: 5vh auto;
-      padding: 2rem 2rem 2rem 2rem;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.05);
-    }
+  .form-wrapper {
+    max-width: 600px;
+    margin: 5vh auto;
+    padding: 0;
+    background: transparent;
+    border: none;
+    text-align: center;
+  }
 
-    h2 {
-      margin-bottom: 1rem;
-      font-weight: normal;
-    }
+  h2 {
+    font-weight: normal;
+    margin-bottom: 1.5rem;
+  }
 
-    label {
-      display: block;
-      margin: 0.75rem 0 0.25rem;
-      font-size: 0.95rem;
-    }
+  label {
+    display: block;
+    margin: 1rem auto 0.25rem;
+    font-size: 0.95rem;
+    text-align: left;
+    width: 80%;
+  }
 
-    input[type="text"],
-    input[type="email"] {
-      width: 100%;
-      padding: 0.75rem;
-      border: 1px solid rgba(0, 0, 0, 0.85);
-      border-radius: 6px;
-      font-family: inherit;
-    }
+  input[type="text"],
+  input[type="email"] {
+    width: 80%;
+    padding: 0.75rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-family: inherit;
+    font-size: 1rem;
+    background-color: #fff;
+  }
 
-    button {
-      margin-top: 1.5rem;
-      padding: 0.5rem 0.5rem;
-      background-color: rgba(0, 0, 0, 0.85);
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-family: inherit;
-    }
+  button {
+    margin-top: 2rem;
+    padding: 0.75rem 1.5rem;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 9999px;
+    font-family: inherit;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
 
-    button:hover {
-      background-color: #333;
-    }
+  button:hover {
+    background-color: #333;
+  }
 
-    .success, .error {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-    }
+  .form-wrapper a {
+    color: #000;
+    text-decoration: underline;
+    font-weight: normal;
+  }
 
-    .success {
-      color: green;
-    }
+  .form-wrapper a:hover {
+    opacity: 0.7;
+  }
 
-    .error {
-      color: red;
-    }
-  </style>
+  .success, .error {
+    margin-top: 1rem;
+    font-size: 0.9rem;
+  }
+
+  .success {
+    color: green;
+  }
+
+  .error {
+    color: red;
+  }
+</style>
 
   <!-- reCAPTCHA v3 -->
   <script src="https://www.google.com/recaptcha/api.js?render=6LfhzVcrAAAAAMC6-9d1oR0UcZU2bJ1QK9D2RhkS"></script>
