--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
 
   <div class="form-wrapper">
-    <h2>Subscribe to Our Newsletter</h2>
+    <h2>Sign up for newsletter</h2>
     <form id="newsletter-form">
       <label for="forename">Forename *</label>
       <input type="text" id="forename" name="forename" required>
