--- a/index.html
+++ b/index.html
@@ -13,34 +13,40 @@
     font-style: normal;
   }
 
-  body {
+  html, body {
     font-family: 'PPNikkeiMaru', sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100%;
     background-color: transparent;
     color: #111;
-    margin: 0;
-    padding: 2rem;
+    overflow-x: hidden;
   }
 
   .form-wrapper {
     max-width: 600px;
-    margin: 5vh auto;
-    padding: 0;
+    height: 100vh;
+    margin: 0 auto;
+    padding: 5vh 2rem;
     background: transparent;
-    border: none;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow-y: auto;
   }
 
   h2 {
     font-weight: normal;
     margin-bottom: 1.5rem;
+    text-align: left;
   }
 
   label {
     display: block;
-    margin: 1rem auto 0.25rem;
+    margin: 1rem 0 0.25rem;
     font-size: 0.95rem;
     text-align: left;
-    width: 80%;
+    width: 100%;
   }
 
   input[type="text"],
@@ -65,6 +71,7 @@
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    text-align: left;
   }
 
   button:hover {
@@ -84,6 +91,7 @@
   .success, .error {
     margin-top: 1rem;
     font-size: 0.9rem;
+    text-align: left;
   }
 
   .success {
