--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   .form-wrapper {
   max-width: 600px;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 5vh 2rem;
   background: transparent;
