--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
     overflow-x: hidden;
   }
 
-  .form-wrapper {
+.form-wrapper {
   max-width: 600px;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
-  padding: 5vh 2rem;
+  padding: 2rem;
   background: transparent;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  align-items: flex-start;  /* Align content to the left */
+  justify-content: flex-start; /* Align content to the top */
   overflow-y: auto;
   scrollbar-width: none;        /* Firefox */
-  -ms-overflow-style: none;     /* Internet Explorer and Edge */
+  -ms-overflow-style: none;     /* IE & Edge */
 }
 
 .form-wrapper::-webkit-scrollbar {
