--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     font-family: 'PPNikkeiMaru', sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: auto;
     background-color: transparent;
     color: #111;
     overflow-x: hidden;
@@ -40,8 +40,9 @@
   }
 
 .form-wrapper {
-  max-width: 700px;
-  height: 100vh;
+  max-width: 100vh;
+  height: auto;
+  min-height: 100%;
   margin: 0 auto;
   padding: 2rem;
   background: transparent;
