--- a/index.html
+++ b/index.html
@@ -2,189 +2,152 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Newsletter Signup</title>
 
-  <!-- Custom Font: PPNikkeiMaru-Regular -->
-<style>
-  @font-face {
-    font-family: 'PPNikkeiMaru';
-    src: url('https://freight.cargo.site/m/D2361668739318309632944015578460/PPNikkeiMaru-Regular.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
+  <!-- Custom Font -->
+  <link rel="preload" href="https://freight.cargo.site/m/D2361668739318309632944015578460/PPNikkeiMaru-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <style>
+    @font-face {
+      font-family: 'PPNikkeiMaru';
+      src: url('https://freight.cargo.site/m/D2361668739318309632944015578460/PPNikkeiMaru-Regular.woff2') format('woff2');
+      font-weight: normal;
+      font-style: normal;
+      font-display: swap;
+    }
 
-  html, body {
-    font-family: 'PPNikkeiMaru', sans-serif;
-    margin: 0;
-    padding: 0;
-    height: auto;
-    background-color: transparent;
-    color: #111;
-    overflow-x: hidden;
-  }
+    * {
+      box-sizing: border-box;
+    }
 
     html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    height: 100%;
-  }
+      margin: 0;
+      padding: 0;
+      font-family: 'PPNikkeiMaru', sans-serif;
+      background: #ffffff;
+      color: #000;
+    }
 
-  ::-webkit-scrollbar {
-    display: none;
-  }
+    .form-wrapper {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 4rem 2rem;
+    }
 
-  body {
-    -ms-overflow-style: none; /* IE 10+ */
-    scrollbar-width: none;     /* Firefox */
-  }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
 
-.form-wrapper {
-  max-width: 100vh;
-  height: auto;
-  min-height: 100%;
-  margin: 0 auto;
-  padding: 2rem;
-  background: transparent;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;  /* Align content to the left */
-  justify-content: flex-start; /* Align content to the top */
-  overflow-y: auto;
-}
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.25rem;
+    }
 
-.form-wrapper::-webkit-scrollbar {
-  display: none;                /* Chrome, Safari, Opera */
-}
+    label {
+      display: block;
+      font-size: 0.9rem;
+      margin-bottom: 0.25rem;
+    }
 
-  h2 {
-    font-weight: normal;
-    margin-bottom: 1.5rem;
-    text-align: left;
-  }
+    input {
+      width: 100%;
+      max-width: 80%;
+      padding: 0.6rem;
+      font-size: 1rem;
+      border: 1px solid #aaa;
+      border-radius: 0;
+      background: transparent;
+    }
 
-  label {
-    display: block;
-    margin: 1rem 0 0.25rem;
-    font-size: 0.95rem;
-    text-align: left;
-    width: 100%;
-  }
+    input:focus {
+      outline: none;
+      border-color: #000;
+    }
 
-  input[type="text"],
-  input[type="email"] {
-    width: 80%;
-    padding: 0.75rem;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    font-family: inherit;
-    font-size: 1rem;
-    background-color: #fff;
-  }
+    .submit-btn {
+      background: #000000d9;
+      color: #fff;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+      width: fit-content;
+    }
 
-  button {
-    margin-top: 2rem;
-    padding: 0.75rem 1.5rem;
-    background-color: #000;
-    color: #fff;
-    border: none;
-    border-radius: 9999px;
-    font-family: inherit;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    text-align: left;
-  }
+    .submit-btn:hover {
+      opacity: 0.9;
+    }
 
-  button:hover {
-    background-color: #333;
-  }
+    .success, .error {
+      font-size: 0.9rem;
+      margin-top: 1rem;
+    }
 
-  .form-wrapper a {
-    color: #000;
-    text-decoration: underline;
-    font-weight: normal;
-  }
+    .success {
+      color: green;
+    }
 
-  .form-wrapper a:hover {
-    opacity: 0.7;
-  }
-
-  .success, .error {
-    margin-top: 1rem;
-    font-size: 0.9rem;
-    text-align: left;
-  }
-
-  .success {
-    color: green;
-  }
-
-  .error {
-    color: red;
-  }
-</style>
-
-  <!-- reCAPTCHA v3 -->
-  <script src="https://www.google.com/recaptcha/api.js?render=6LfhzVcrAAAAAMC6-9d1oR0UcZU2bJ1QK9D2RhkS"></script>
+    .error {
+      color: red;
+    }
+  </style>
 </head>
 <body>
-
   <div class="form-wrapper">
-    <h2>Sign up for newsletter</h2>
+    <h1>Subscribe to Newsletter</h1>
     <form id="newsletter-form">
-      <label for="forename">Forename *</label>
-      <input type="text" id="forename" name="forename" required>
-<br>
-      <label for="surname">Surname *</label>
-      <input type="text" id="surname" name="surname" required>
-<br>
-      <label for="company">Company *</label>
-      <input type="text" id="company" name="company" required>
-<br>
-      <label for="title">Job Title *</label>
-      <input type="text" id="title" name="title" required>
-<br>
-      <label for="email">Email Address *</label>
-      <input type="email" id="email" name="email" required>
-<br><br>
-      <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
-      <button type="submit">Subscribe</button>
-      <div class="success" style="display:none;">Thank you! Your submission has been received.</div>
+      <div>
+        <label for="forename">Forename*</label>
+        <input type="text" id="forename" name="forename" required />
+      </div>
+      <div>
+        <label for="surname">Surname*</label>
+        <input type="text" id="surname" name="surname" required />
+      </div>
+      <div>
+        <label for="company">Company*</label>
+        <input type="text" id="company" name="company" required />
+      </div>
+      <div>
+        <label for="jobtitle">Job Title*</label>
+        <input type="text" id="jobtitle" name="jobtitle" required />
+      </div>
+      <div>
+        <label for="email">Email Address*</label>
+        <input type="email" id="email" name="email" required />
+      </div>
+      <button type="submit" class="submit-btn">Subscribe</button>
+      <div class="success" style="display:none;">Thanks for subscribing!</div>
       <div class="error" style="display:none;">There was an error. Please try again.</div>
     </form>
   </div>
 
   <script>
-    document.getElementById('newsletter-form').addEventListener('submit', function (e) {
+    document.getElementById("newsletter-form").addEventListener("submit", function (e) {
       e.preventDefault();
 
-      grecaptcha.ready(function () {
-        grecaptcha.execute('6LfhzVcrAAAAAMC6-9d1oR0UcZU2bJ1QK9D2RhkS', { action: 'submit' }).then(function (token) {
-          document.getElementById('g-recaptcha-response').value = token;
+      const scriptURL = "YOUR_GOOGLE_SCRIPT_URL";
+      const form = e.target;
+      const successMsg = form.querySelector(".success");
+      const errorMsg = form.querySelector(".error");
 
-          const form = e.target;
-          const data = new FormData(form);
-
-          fetch('https://script.google.com/macros/s/AKfycbzCAMA0PRtLR9j_sISJpOpjnTwR96EpDVROS6sBriqG7numsjSHCpSmRxa3avLM_FBl/exec', {
-            method: 'POST',
-            body: data
-          }).then(response => {
-            if (response.ok) {
-              form.reset();
-              form.querySelector('.success').style.display = 'block';
-              form.querySelector('.error').style.display = 'none';
-            } else {
-              throw new Error('Network response was not ok.');
-            }
-          }).catch(() => {
-            form.querySelector('.success').style.display = 'none';
-            form.querySelector('.error').style.display = 'block';
-          });
+      fetch(scriptURL, { method: "POST", body: new FormData(form) })
+        .then(response => {
+          if (response.ok) {
+            successMsg.style.display = "block";
+            errorMsg.style.display = "none";
+            form.reset();
+          } else {
+            throw new Error();
+          }
+        })
+        .catch(() => {
+          successMsg.style.display = "none";
+          errorMsg.style.display = "block";
         });
-      });
     });
   </script>
-
 </body>
 </html>
