--- a/index.html
+++ b/index.html
@@ -16,114 +16,53 @@
       font-display: swap;
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    @use postcss-preset-env {
+  stage: 0
+}
 
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: 'PPNikkeiMaru', sans-serif;
-      background: #ffffff;
-      color: #000;
-    }
+body {
+  min-height: 100vh;
+  display: grid;
+  align-items: center;
+}
 
-    .form-wrapper {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 4rem 2rem;
+form {
+  display: flex;
+  flex-wrap: wrap;
+  
+  & > input {
+    flex: 1 1 10ch;
+    margin: .5rem;
+    
+    &[type="email"] {
+      flex: 3 1 30ch;
     }
+  }
+}
 
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1.25rem;
-    }
-
-    label {
-      display: block;
-      font-size: 0.9rem;
-      margin-bottom: 0.25rem;
-    }
-
-    input {
-      width: 100%;
-      max-width: 80%;
-      padding: 0.6rem;
-      font-size: 1rem;
-      border: 1px solid #aaa;
-      border-radius: 0;
-      background: transparent;
-    }
-
-    input:focus {
-      outline: none;
-      border-color: #000;
-    }
-
-    .submit-btn {
-      background: #000000d9;
-      color: #fff;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      cursor: pointer;
-      width: fit-content;
-    }
-
-    .submit-btn:hover {
-      opacity: 0.9;
-    }
-
-    .success, .error {
-      font-size: 0.9rem;
-      margin-top: 1rem;
-    }
-
-    .success {
-      color: green;
-    }
-
-    .error {
-      color: red;
-    }
+input {
+  border: none;
+  background: hsl(0 0% 93%);
+  border-radius: .25rem;
+  padding: .75rem 1rem;
+  
+  &[type="submit"] {
+    background: hotpink;
+    color: white;
+    box-shadow: 0 .75rem .5rem -.5rem hsl(0 50% 80%);
+  }
+}
   </style>
 </head>
 <body>
-  <div class="form-wrapper">
-    <h1>Subscribe to Newsletter</h1>
-    <form id="newsletter-form">
-      <div>
-        <label for="forename">Forename*</label>
-        <input type="text" id="forename" name="forename" required />
-      </div>
-      <div>
-        <label for="surname">Surname*</label>
-        <input type="text" id="surname" name="surname" required />
-      </div>
-      <div>
-        <label for="company">Company*</label>
-        <input type="text" id="company" name="company" required />
-      </div>
-      <div>
-        <label for="jobtitle">Job Title*</label>
-        <input type="text" id="jobtitle" name="jobtitle" required />
-      </div>
-      <div>
-        <label for="email">Email Address*</label>
-        <input type="email" id="email" name="email" required />
-      </div>
-      <button type="submit" class="submit-btn">Subscribe</button>
-      <div class="success" style="display:none;">Thanks for subscribing!</div>
-      <div class="error" style="display:none;">There was an error. Please try again.</div>
-    </form>
-  </div>
-
+<form>
+  <input type="text" placeholder="Name">
+  <input type="text" placeholder="Company">  
+  <input type="text" placeholder="Job Title">  
+  <input type="email" placeholder="Email Address">
+  <input type="submit" value="Subscribe">
+</form>
+  
   <script>
     document.getElementById("newsletter-form").addEventListener("submit", function (e) {
       e.preventDefault();
