--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       margin: 0.25rem;
       border: none;
       background: hsl(0 0% 93%);
-      border-radius: 0.25rem;
+      border-radius: 1rem;
       padding: 0.75rem 1rem;
       font-size: 1rem;
     }
@@ -51,7 +51,7 @@
     }
 
     form > input[type="submit"]:hover {
-      background: #000000;
+      background: hsl(0 0% 93%);
     }
 
     .success, .error {
