--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     form > input[type="submit"]:hover {
       background: hsl(0 0% 93%);
+      font-color: #121212;
     }
 
     .success, .error {
@@ -79,6 +80,7 @@
     <input type="text" name="company" placeholder="Company">  
     <input type="text" name="job_title" placeholder="Job Title">  
     <input type="email" name="email" placeholder="Email Address" required>
+    <br>
     <input type="submit" value="Subscribe">
     <p class="success">Thank you for subscribing!</p>
     <p class="error">Something went wrong. Please try again.</p>
